--- a/UtilityLib/UtilityLib.csproj
+++ b/UtilityLib/UtilityLib.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalDTO.cs" />
     <Compile Include="SessionHelper.cs" />
+    <Compile Include="SplashScreenHelper.cs" />
     <Compile Include="WinAPI.cs" />
     <Compile Include="XMLHelper.cs" />
   </ItemGroup>
