--- a/UtilityLib/UtilityLib.csproj
+++ b/UtilityLib/UtilityLib.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Definition.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FormState.cs" />
+    <Compile Include="GlobalDA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalDTO.cs" />
     <Compile Include="SessionHelper.cs" />
