[FIX] Process DA with ddl

--- a/WFA.OCR/WFA.OCR.csproj
+++ b/WFA.OCR/WFA.OCR.csproj
@@ -58,6 +58,9 @@
       <HintPath>..\packages\EMGU.CV.4.0.1.3373\lib\net35\Emgu.CV.World.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="HotkeyManagement">
+      <HintPath>..\UtilityLib\dll\HotkeyManagement.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http.WebRequest" />
