--- a/UtilityLib/UtilityLib.csproj
+++ b/UtilityLib/UtilityLib.csproj
@@ -49,9 +49,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalDTO.cs" />
     <Compile Include="SessionHelper.cs" />
-    <Compile Include="SplashScreenHelper.cs" />
+    <Compile Include="IOHelper.cs" />
     <Compile Include="WinAPI.cs" />
     <Compile Include="XMLHelper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dll\HotkeyManagement.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
