--- a/WFA.OCR/WFA.OCR.csproj
+++ b/WFA.OCR/WFA.OCR.csproj
@@ -80,6 +80,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CaptureAreaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CaptureAreaForm.Designer.cs">
+      <DependentUpon>CaptureAreaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helper\ButtonHelper.cs" />
     <Compile Include="Helper\Global.cs" />
     <Compile Include="Helper\PluginHelper.cs" />
