--- a/WFA.OCR/WFA.OCR.csproj
+++ b/WFA.OCR/WFA.OCR.csproj
@@ -250,6 +250,7 @@
     <EmbeddedResource Include="UserControls\UCPDF2Image.resx">
       <DependentUpon>UCPDF2Image.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Deploy\Deploy.zip" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
