[UPDATE] Add FMCrotrol Structure

--- a/WFA.OCR/WFA.OCR.csproj
+++ b/WFA.OCR/WFA.OCR.csproj
@@ -285,6 +285,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="FormControls\" />
     <Folder Include="TessData\" />
   </ItemGroup>
   <ItemGroup>
