--- a/WFA.OCR/WFA.OCR.csproj
+++ b/WFA.OCR/WFA.OCR.csproj
@@ -89,6 +89,12 @@
     <Compile Include="CaptureAreaForm.Designer.cs">
       <DependentUpon>CaptureAreaForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormControls\testForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormControls\testForm.Designer.cs">
+      <DependentUpon>testForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helper\ButtonHelper.cs" />
     <Compile Include="Helper\Global.cs" />
     <Compile Include="Helper\PluginHelper.cs" />
@@ -120,6 +126,18 @@
     </Compile>
     <Compile Include="UserControls\AboutMe\UCABM001.Designer.cs">
       <DependentUpon>UCABM001.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\MSOffice\UCMSO001.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\MSOffice\UCMSO001.Designer.cs">
+      <DependentUpon>UCMSO001.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\MSOffice\UCClientMSOffice.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\MSOffice\UCClientMSOffice.Designer.cs">
+      <DependentUpon>UCClientMSOffice.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControls\OCR\UCClientOcr.cs">
       <SubType>UserControl</SubType>
@@ -217,6 +235,12 @@
     <EmbeddedResource Include="UserControls\AboutMe\UCABM001.resx">
       <DependentUpon>UCABM001.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\MSOffice\UCMSO001.resx">
+      <DependentUpon>UCMSO001.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\MSOffice\UCClientMSOffice.resx">
+      <DependentUpon>UCClientMSOffice.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\OCR\UCClientOcr.resx">
       <DependentUpon>UCClientOcr.cs</DependentUpon>
     </EmbeddedResource>
@@ -285,7 +309,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="FormControls\" />
     <Folder Include="TessData\" />
   </ItemGroup>
   <ItemGroup>
